fix: improve darkmode scrollbar styling and SqlCodeEditor darkmode's scrollbar (#108)

--- a/src/renderer/components/OptimizeTable/styles.module.css
+++ b/src/renderer/components/OptimizeTable/styles.module.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.tableContainer::-webkit-scrollbar-corner {
+  background: var(--color-scrollbar);
+}
+
 .tableContainer table {
   position: absolute;
   display: grid;
